added play button

--- a/index.html
+++ b/index.html
@@ -430,6 +430,13 @@
     </div>
     <div>
       <img src="video image.png" alt="video" class="mx-auto max-w-2xl" />
+      <span
+        ><img
+          src="play button.png"
+          alt="play button"
+          class="absolute z-10"
+          style="position: absolute; left: 600px; top: 3140px"
+      /></span>
     </div>
 
     <div
